@@ -1,5 +1,7 @@
 *SVN*
 
+* Revert environment changes for autoload_paths. [Koz]
+
 * Update to latest Prototype, which doesn't serialize disabled form elements, adds clone() to arrays, empty/non-string Element.update() and adds a fixes excessive error reporting in WebKit beta versions [Thomas Fuchs]
 
 * Clean up the output of rake stats,  de-emphasise components and apis, and remove the indents for tests [Koz]
